--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "celebrate": "^15.0.1",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4"
   }
